fix: select footer/header overlap

--- a/src/popup/modules/shared/components/layout/Container/Container.scss
+++ b/src/popup/modules/shared/components/layout/Container/Container.scss
@@ -13,9 +13,11 @@
             padding-left: 0;
             padding-right: 0;
         }
+    }
+}
 
-        .rc-select-dropdown {
-            z-index: 101; // header/footer overlap workaround
-        }
+.layout-container {
+    .rc-select-dropdown {
+        z-index: 101; // header/footer overlap workaround
     }
 }
